--- a/templates/partial_templates/test_section.html
+++ b/templates/partial_templates/test_section.html
@@ -10,19 +10,23 @@
         <!-- Create the Overall Scoring Category Headers -->
         <tr>
             <!-- Empty Padding to Align Everything -->
-            <th class="w-1/4"></th>
+            <th class="w-1/5"></th>
 
             {% for scoring_category in section.scoring_categories %}
                 <th class="lg:text-4xl py-2" colspan="{{ scoring_category.values.len() }}" scope="colgroup">
-                    {{ scoring_category.name }}
+                    {{ scoring_category.name }} 
                 </th>
             {% endfor %}
+            <!-- If there is only one scoring category then the item to be graded may have an antithesis. This leaves room for that -->
+            {% if section.scoring_categories.len() == 1 %}
+                <th class="w-[15%]"></th>
+            {% endif %}
         </tr>
 
         <!-- Create the Detailed Scoring Headers -->
         <tr>
             <!-- Empty Padding to Align Everything -->
-            <th class="w-1/4 border-r"></th>
+            <th class="w-1/5 border-r"></th>
 
             {% for scoring_category in section.scoring_categories %}
                 {% for header in scoring_category.values %}
@@ -31,19 +35,28 @@
                     </th>
                 {% endfor %}
             {% endfor %}
+            <!-- If there is only one scoring category then the item to be graded may have an antithesis. This leaves room for that -->
+            {% if section.scoring_categories.len() == 1 %}
+                <th class="w-[15%]"></th>
+            {% endif %}
         </tr>
     </thead>
 
     <!-- Add the Items -->
     <tbody>
-        {% for item in section.items_to_be_graded %}
+        {% for item in section.competencies %}
+        {% let item_index = loop.index0 %}
         <tr>
             <!-- Add the Item Name to the Left Column -->
-            <td class="py-2 px-4 border-b border-r font-bold sm:text-sm md:text-xl lg:text-2xl text-right">{{ item.name }}</td>
+            <td class="py-2 px-4 border-b border-r font-bold sm:text-sm md:text-xl lg:text-2xl text-right">
+                {{ item.name }}
+                {% match item.subtext %}{% when Some with (subtext) %}<br><span class="text-xs lg:text-base text-gray-400 font-normal">{{ subtext }}</span>{% when None %}{% endmatch %}
+            </td>
 
             <!-- Add radio buttons for each scoring category -->
             {% for scoring_category in section.scoring_categories %}
-                {% for point in item.scores[loop.index - 1] %}
+            {% let scoring_category_index = loop.index0 %}
+                {% for point in item.scores[scoring_category_index] %}
                     <!-- Add a border between scoring categories for comprehension -->
                     <td class="py-2 px-1 w-full border-b text-center {% if loop.last %}border-r border-gray-300 last:border-0{% else %}{% endif %}">
 
@@ -55,22 +68,27 @@
 
                         <input 
                             type="radio" 
-                            name="section_name---{{ section.name }}---item_name---{{ item.name }}---scoring_category---{{ scoring_category.name}}" 
-                            id="section_name---{{ section.name }}---item_name---{{ item.name }}---scoring_category---{{ scoring_category.name }}---{{ point }}" 
-                            value="{{ point }}" 
+                            name="table_index---{{ table_index }}---section_index---{{ section_index }}---item_index---{{ item_index }}---scoring_category_index---{{ scoring_category_index }}"
+                            id="table_index---{{ table_index }}---section_index---{{ section_index }}---item_index---{{ item_index }}---scoring_category_index---{{ scoring_category_index }}---scoring_category_label_index---{{ loop.index0 }}---{{ point }}" 
+                            value="scoring_category_label_index---{{ loop.index0 }}---points---{{ point }}" 
                             class="hidden peer" 
                             required
                             {% if loop.last %}checked{% else %}{% endif %}
                         >
                         <label 
-                            for="section_name---{{ section.name }}---item_name---{{ item.name }}---scoring_category---{{ scoring_category.name }}---{{ point }}" 
+                            for="table_index---{{ table_index }}---section_index---{{ section_index }}---item_index---{{ item_index }}---scoring_category_index---{{ scoring_category_index }}---scoring_category_label_index---{{ loop.index0 }}---{{ point }}" 
                             class="inline-flex items-center justify-center w-full h-12 p-2 text-sm font-medium text-gray-900 bg-white border-2 border-gray-300 rounded-lg cursor-pointer peer-checked:bg-blue-600 peer-checked:text-white peer-checked:border-transparent hover:bg-gray-100 hover:shadow-sm transition duration-300"
                         >
                             {{ point }}
                         </label>
                     </td>
                 {% endfor %}
-            {% endfor %}
+
+                <!-- Add the antithesis to the right of the table -->
+                {% if section.scoring_categories.len() == 1 %}
+                    <td class="py-2 px-4 border-b sm:text-xs text-left break-words">{% match item.antithesis %}{% when Some with (antithesis) %}{{ antithesis }}{% when None %}{% endmatch %}</td>
+                {% endif %}
+                {% endfor %}
         </tr>
         {% endfor %}
     </tbody>
