--- a/templates/primary_templates/dashboard.html
+++ b/templates/primary_templates/dashboard.html
@@ -10,17 +10,13 @@
   <!-- Flex Container for Cards -->
   <div class="flex flex-col space-y-4 md:flex-row md:space-y-0">
 
-    <!-- Leader Test Card -->
-    <a href="/leader-test" class="bg-gray-200 hover:bg-gray-300 transition duration-300 rounded-lg shadow-lg p-6 flex-1 md:mr-2">
-      <h5 class="text-xl font-semibold text-gray-800">Leader Test</h5>
-      <p class="mt-2 text-gray-600">Administer the leader test for your dance candidates.</p>
-    </a>
-
-    <!-- Follower Test Card -->
-    <a href="/follower-test" class="bg-gray-200 hover:bg-gray-300 transition duration-300 rounded-lg shadow-lg p-6 flex-1 md:ml-2">
-      <h5 class="text-xl font-semibold text-gray-800">Follower Test</h5>
-      <p class="mt-2 text-gray-600">Administer the follower test for your dance candidates.</p>
-    </a>
+    <!-- Add Test Definition Cards -->
+    {% for test_name in test_names %}
+      <a href="/administer-test/{{ loop.index0 }}" class="bg-gray-200 hover:bg-gray-300 transition duration-300 rounded-lg shadow-lg p-6 flex-1 md:mr-2">
+        <h5 class="text-xl font-semibold text-gray-800">{{ test_name }}</h5>
+        <p class="mt-2 text-gray-600">Administer this test.</p>
+      </a>
+    {% endfor %}
 
   </div>
 </div>
