--- a/templates/primary_templates/queue.html
+++ b/templates/primary_templates/queue.html
@@ -88,7 +88,7 @@
                     <td class="py-2 px-4">
                         <button
                         id="administer-test-button"   {# ID is used in HX-Trigger response header parsing #}
-                        hx-delete="/queue/dequeue?testee_id={{ testee.id }}&role={{ role }}" 
+                        hx-delete="/queue/dequeue?testee_id={{ testee.id.unwrap() }}&role={{ role }}" 
                         hx-swap="outerHTML"
                         hx-select="#primary-content"
                         hx-target="#primary-content"
@@ -99,14 +99,13 @@
                         >Administer Test</button> 
                         <span>|</span>
                         <button 
-                        hx-delete="/queue/dequeue?testee_id={{ testee.id }}&role={{ role }}" 
+                        hx-delete="/queue/dequeue?testee_id={{ testee.id.unwrap() }}&role={{ role }}" 
                         hx-swap="outerHTML"
                         hx-confirm="Are you sure you want to delete {{ testee.first_name }} {{testee.last_name}} from the queue?"
                         hx-target="closest tr"
                         class="text-red-600 hover:text-red-900 hover:underline"
                         {% if is_demo_mode %}disabled{% else %}{% endif %}
                         >Delete</button>
-
                     </td>
                     {% endif %}
                 </tr>
