--- a/templates/partial_templates/test_grade.html
+++ b/templates/partial_templates/test_grade.html
@@ -1,12 +1,35 @@
 
 
-{% if score > passing_score %}
+
+{% if summary.is_passing %}
     <div class="card shadow-md rounded border border-gray-300 mb-6 p-4 bg-green-100 hover:bg-green-200 text-center border-gray-100 hover:shadow-xl transition duration-300">
 {% else %}
     <div class="card shadow-md rounded border border-gray-300 mb-6 p-4 bg-red-100 hover:bg-red-200 text-center border-gray-100 hover:shadow-xl transition duration-300">
 {% endif %}
+
     <h2 class="text-2xl font-semibold">Scoring Information</h2>
-    <p class="text-xl"><strong>Score:</strong> {{ score }} / {{ max_score }}</p>
-    <p class="text-xl"><strong>Passing Score:</strong> {{ passing_score }}</p>
-    <p class="font-bold text-xl">Status: {% if score > passing_score %}<span class="text-green-700">Passing</span>{% else %} <span class="text-red-700">Failing</span> {% endif %}</p>
+    <p class="text-xl"><strong>Score: </strong> {{ summary.achieved_score }} / {{ summary.max_score }} = {{ format!("{:.0}" , summary.achieved_percent * 100.0) }}%</p> 
+    <p class="text-xl"><strong>Passing Score: </strong>{{ format!("{:.0}", summary.minimum_percent * 100.0) }}%</p>
+
+        
+        {% if summary.is_passing %}
+            <p class="font-bold text-xl"></p>
+                Status: 
+                <span class="text-green-700">Passing</span>
+            </p>
+        {% else %} 
+            <p class="font-bold text-xl">
+                Status:
+                <span class="text-red-700">Failing</span> 
+            </p>
+            {% match summary.failure_explanation %}
+                {% when Some with (failure_explanations) %}
+                <ul>
+                    {% for failure_explanation in failure_explanations %}
+                        <li>{{ failure_explanation }}</li>
+                    {% endfor %}
+                </ul>
+                {% when None %}
+            {% endmatch %}
+        {% endif %}
 </div>
