--- a/templates/primary_templates/dancer_test.html
+++ b/templates/primary_templates/dancer_test.html
@@ -1,3 +1,5 @@
+{# This template is used both for administering the test and displaying the graded test. #}
+
 {% extends "./extensible_templates/nav_on_top.html" %}
 
 {% block title %}{{ test.metadata.test_name }}{% endblock %}
@@ -31,15 +33,15 @@
                 </div> -->
 
 
-                {% match test.metadata.is_graded %}
-                {% when Some with (_) %}
-                <!-- Test Results Section -->
-                
+                {% match test_summary %}
+                    {% when Some with (summary) %}
+                    <!-- Test Results Section -->
+                        {% include "../partial_templates/test_grade.html" %} 
 
-                {% when None %}
-                    <div class="flex flex-col text-center">
-                        <input type="submit" value={% if is_demo_mode %}"Submission Disabled for Demo"{% else %}Submit{% endif %} class="{% if is_demo_mode %}bg-gray-300 text-gray-900{% else %}bg-blue-500 hover:bg-blue-700 text-white{% endif %} mx-auto font-bold py-2 px-4 mb-4 rounded" {% if is_demo_mode %}disabled{% else %}{% endif %}>
-                    </div>
+                    {% when None %}
+                        <div class="flex flex-col text-center">
+                            <input type="submit" value={% if is_demo_mode %}"Submission Disabled for Demo"{% else %}Submit{% endif %} class="{% if is_demo_mode %}bg-gray-300 text-gray-900{% else %}bg-blue-500 hover:bg-blue-700 text-white{% endif %} mx-auto font-bold py-2 px-4 mb-4 rounded" {% if is_demo_mode %}disabled{% else %}{% endif %}>
+                        </div>
                 {% endmatch %}
 
 
