--- a/templates/partial_templates/test_grade.html
+++ b/templates/partial_templates/test_grade.html
@@ -1,18 +1,19 @@
 
 
 
-{% if summary.is_passing %}
+{% if grade_summary.is_passing %}
     <div class="card shadow-md rounded border border-gray-300 mb-6 p-4 bg-green-100 hover:bg-green-200 text-center border-gray-100 hover:shadow-xl transition duration-300">
 {% else %}
     <div class="card shadow-md rounded border border-gray-300 mb-6 p-4 bg-red-100 hover:bg-red-200 text-center border-gray-100 hover:shadow-xl transition duration-300">
 {% endif %}
 
-    <h2 class="text-2xl font-semibold">Scoring Information</h2>
-    <p class="text-xl"><strong>Score: </strong> {{ summary.achieved_score }} / {{ summary.max_score }} = {{ format!("{:.0}" , summary.achieved_percent * 100.0) }}%</p> 
-    <p class="text-xl"><strong>Passing Score: </strong>{{ format!("{:.0}", summary.minimum_percent * 100.0) }}%</p>
 
-        
-        {% if summary.is_passing %}
+    <h2 class="text-2xl font-semibold">Scoring Information</h2>
+    <p class="text-xl"><strong>Score: </strong> {{ grade_summary.achieved_score }} / {{ grade_summary.max_score }} = {{ "{:.0}"|format(grade_summary.achieved_percent * 100.0) }}%</p> 
+    <p class="text-xl"><strong>Passing Score: </strong>{{ "{:.0}"|format(grade_summary.minimum_percent * 100.0) }}%</p>
+
+
+        {% if grade_summary.is_passing %}
             <p class="font-bold text-xl"></p>
                 Status: 
                 <span class="text-green-700">Passing</span>
@@ -22,7 +23,9 @@
                 Status:
                 <span class="text-red-700">Failing</span> 
             </p>
-            {% match summary.failure_explanation %}
+
+
+            {% match grade_summary.failure_explanation %}
                 {% when Some with (failure_explanations) %}
                 <ul>
                     {% for failure_explanation in failure_explanations %}
