--- a/templates/primary_templates/dancer_test.html
+++ b/templates/primary_templates/dancer_test.html
@@ -23,22 +23,20 @@
 
             
             <div class="hidden sm:block justify-center">
-
-
-                <!-- <div 
-                hx-post="/private/grade-test" 
-                hx-trigger="load, change from:form"
-                hx-debounce="0.25s"
-                >
-                </div> -->
-
-
                 {% match test_summary %}
                     {% when Some with (summary) %}
+                    {% let grade_summary = summary.grade_summary.clone() %}
                     <!-- Test Results Section -->
                         {% include "../partial_templates/test_grade.html" %} 
 
                     {% when None %}
+                        <div 
+                            hx-post="/private/grade-test/{{ test_index }}" 
+                            hx-trigger="load, change from:form"
+                            hx-debounce="0.25s"
+                        >
+                        </div>
+
                         <div class="flex flex-col text-center">
                             <input type="submit" value={% if is_demo_mode %}"Submission Disabled for Demo"{% else %}Submit{% endif %} class="{% if is_demo_mode %}bg-gray-300 text-gray-900{% else %}bg-blue-500 hover:bg-blue-700 text-white{% endif %} mx-auto font-bold py-2 px-4 mb-4 rounded" {% if is_demo_mode %}disabled{% else %}{% endif %}>
                         </div>
